--- a/firstHomeWork/pom.xml
+++ b/firstHomeWork/pom.xml
@@ -29,6 +29,7 @@
         <org.apache.maven.plugins.maven.compiler.version>3.7.0</org.apache.maven.plugins.maven.compiler.version>
         <org.apache.maven.plugins.maven.assembly.version>3.0.0</org.apache.maven.plugins.maven.assembly.version>
         <org.apache.maven.plugins.jar.plugin.version>3.0.2</org.apache.maven.plugins.jar.plugin.version>
+        <net.sf.proguard.version>6.0</net.sf.proguard.version>
     </properties>
 
 
@@ -44,6 +45,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${org.apache.commons.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.sf.proguard/proguard-base -->
+        <dependency>
+            <groupId>net.sf.proguard</groupId>
+            <artifactId>proguard-base</artifactId>
+            <version>${net.sf.proguard.version}</version>
         </dependency>
     </dependencies>
 
@@ -92,14 +100,50 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${org.apache.maven.plugins.maven.compiler.version}</version>
+                <groupId>com.github.wvengen</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <version>2.0.14</version>
+
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>proguard</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <proguardVersion>6.0</proguardVersion>
+                    <obfuscate>true</obfuscate>
+                    <outjar>firstHomeWork-release.jar</outjar>
+
+                    <options>
+                        <option>-keep public class ru.otus.homeWork.Main {public static void main(java.lang.String[]);}</option>
+                        <option>-dontwarn</option>
+                    </options>
+
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.sf.proguard</groupId>
+                        <artifactId>proguard-base</artifactId>
+                        <version>6.0</version>
+                        <scope>system</scope>
+                        <systemPath>${basedir}/proguard/proguard-base-6.0.jar</systemPath>
+                    </dependency>
+                </dependencies>
             </plugin>
+
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>${org.apache.maven.plugins.maven.compiler.version}</version>-->
+                <!--<configuration>-->
+                    <!--<source>${maven.compiler.source}</source>-->
+                    <!--<target>${maven.compiler.target}</target>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
