--- a/firstHomeWork/pom.xml
+++ b/firstHomeWork/pom.xml
@@ -14,9 +14,8 @@
         </developer>
     </developers>
 
-
     <groupId>ru.otus</groupId>
-    <artifactId>firstHomeWork</artifactId>
+    <artifactId>first-home-work</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -24,11 +23,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <com.google.guava.version>23.0</com.google.guava.version>
-        <org.apache.commons.version>3.0</org.apache.commons.version>
-        <org.apache.maven.plugins.maven.compiler.version>3.7.0</org.apache.maven.plugins.maven.compiler.version>
-        <org.apache.maven.plugins.maven.assembly.version>3.0.0</org.apache.maven.plugins.maven.assembly.version>
-        <org.apache.maven.plugins.jar.plugin.version>3.0.2</org.apache.maven.plugins.jar.plugin.version>
+        <guava.version>23.0</guava.version>
+        <apache.commons.version>3.0</apache.commons.version>
+        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
+        <maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
+        <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
     </properties>
 
 
@@ -36,14 +35,14 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${com.google.guava.version}</version>
+            <version>${guava.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${org.apache.commons.version}</version>
+            <version>${apache.commons.version}</version>
         </dependency>
     </dependencies>
 
@@ -55,11 +54,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>${org.apache.maven.plugins.jar.plugin.version}</version>
+                <version>${maven.jar.plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.homeWork.Main</mainClass>
+                            <mainClass>ru.otus.logic.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -68,7 +67,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>${org.apache.maven.plugins.maven.assembly.version}</version>
+                <version>${maven.assembly.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>my-maven-assembly-plugin</id>
@@ -85,7 +84,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.homeWork.Main</mainClass>
+                            <mainClass>ru.otus.logic.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -94,7 +93,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${org.apache.maven.plugins.maven.compiler.version}</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
